# haskell-atp

./: .gitignore  .hlint  ATP.cabal  ATP.cabal.exec  ATP.cabal.lib  Completion.lhs  Complex.lhs  Cooper.lhs  Equal.lhs  Fol.lhs  Formula.lhs  FormulaSyn.lhs  Herbrand.lhs  Interpolation.lhs  Intro.lhs  IntroSyn.lhs  Lex.lhs  Lib.lhs  ListSet.lhs  Main.lhs  Main.old.lhs  Makefile  Order.lhs  Paramodulation.lhs  Prolog.lhs  Prop.lhs  PropExamples.lhs  README  README.md  Rewrite.lhs  Setup.lhs  Skolem.lhs  TestFormulas.lhs  Unif.lhs  UnionFind.lhs  atp.prof  formulas.txt  haskell.tex
notes/: implementation.md
quasi/: Formula.lhs  Formula2.lhs  Formula3.lhs  Formula4.lhs  Lam.lhs  LamE.lhs  LamQ.lhs  Quote.lhs  Quote3.lhs  notes.txt
src/: .ghci  Compat.lhs  Main.lhs  Main.old2.lhs  bug.txt  debug
src/ATP/: .ghci  Bdd.lhs  Combining.lhs  Completion.lhs  Complex.lhs  Complex.old.lhs  Cong.lhs  Cooper.lhs  DLO.lhs  DP.lhs  Decidable.lhs  DefCNF.lhs  DefCnf.lhs  Dlo.lhs  Dp.lhs  EqElim.lhs  Equal.lhs  FOL.lhs  Fol.lhs  Formula.lhs  FormulaSyn.lhs  Geom.lhs  Grobner.lhs  Herbrand.lhs  Interpolation.lhs  Intro.lhs  IntroSyn.lhs  MPoly.lhs  Makefile  Meson.lhs  Order.lhs  Paramodulation.lhs  Poly.lhs  Prolog.lhs  Prop.lhs  PropExamples.lhs  Qelim.lhs  README  Real.lhs  Resolution.lhs  (+7 more)
src/ATP/Test/: .ghci  Combining.lhs  Complex.lhs  Cooper.lhs  DLO.lhs  Dlo.lhs  Fo.lhs  Grobner.lhs  Misc.lhs  Real.lhs  Taut.lhs
src/ATP/Util/: Debug.lhs  Impossible.lhs  Lex.lhs  Lex.old.lhs  Lib.lhs  List.lhs  ListSet.lhs  Log.lhs  Misc.lhs  Monad.lhs  Parse.lhs  Prelude.lhs  Print.lhs  TH.lhs  Tuple.lhs  UnionFind.lhs
src/ATP/Util/Log/: Class.lhs
src/ATP/Util/Parse/: Parse.lhs
src/ATP/Util/Print/: Print.lhs
test/: Main.hs
tmp/: ATP.both.cabal  ATP.exec.cabal
util/: hscolour.css
