
name:           ATP
version:        1.0.0
cabal-version:  >= 1.6.0.3 && < 2
build-type:     Simple
license-file:   LICENSE
author:         Sean McLaughlin <seanmcl@gmail.com>
maintainer:	Sean McLaughlin <seanmcl@gmail.com>
category:       Theorem provers

synopsis:       A Haskell port of the code from John Harrison's book 
                Handbook of Practical Logic and Automated Reasoning.

description:    Haskell theorem proving algorithms.

tested-with:    GHC == 6.10.4

extra-source-files: README LICENSE

library

  hs-source-dirs: src

  build-depends:  base,
                  haskell98,
                  containers,
                  mtl,
                  parsec,
                  utf8-string >= 0.3.5,
                  HUnit >= 1.2.2.0,
                  pretty,
                  QuickCheck >= 2.1.0.0,
                  template-haskell,
                  hslogger >= 1.0.7,
                  syb

  extensions:    MultiParamTypeClasses
                 ScopedTypeVariables
                 TypeSynonymInstances
                 OverlappingInstances
                 FlexibleInstances
                 DeriveDataTypeable
                 TemplateHaskell
                 QuasiQuotes

  exposed-modules: ATP.Util.Lex
                   ATP.Util.Lib
                   ATP.Util.List
                   ATP.Util.ListSet
                   ATP.Util.Log
                   ATP.Util.Log.Class
                   ATP.Util.Misc
                   ATP.Util.Monad
                   ATP.Util.Parse
                   ATP.Util.Parse.Parse
                   ATP.Util.Print
                   ATP.Util.Print.Print
                   ATP.Util.TH
                   ATP.Util.UnionFind
                   
                   ATP.IntroSyn
                   ATP.Intro
                   ATP.FormulaSyn
                   ATP.Formula
                   ATP.Prop
                   ATP.PropExamples
                   ATP.DefCNF
                   ATP.FOL
                   ATP.DP
                   ATP.Skolem
                   ATP.Herbrand
                   ATP.Unif
                   ATP.Tableaux
                   ATP.Resolution
                   ATP.Prolog
                   ATP.Meson
                   ATP.Equal
                   ATP.Cong
                   ATP.Rewrite
                   ATP.Order
                   ATP.Completion
                   ATP.EqElim
                   ATP.Paramodulation
                   ATP.Decidable
                   ATP.Qelim
                   ATP.Cooper
                   ATP.Complex
                   ATP.Real
                   ATP.Grobner
                   ATP.Geom
                   ATP.Interpolation
                   ATP.Combining
                   ATP.TestFormulas

executable atp

  main-is:       Main.lhs

  hs-source-dirs: src

  build-depends:  base,
                  haskell98,
                  containers,
                  mtl,
                  parsec,
                  utf8-string >= 0.3.5,
                  HUnit >= 1.2.2.0,
                  pretty,
                  QuickCheck >= 2.1.0.0,
                  template-haskell,
                  hslogger >= 1.0.7,
                  syb

  extensions:    MultiParamTypeClasses
                 ScopedTypeVariables
                 TypeSynonymInstances
                 OverlappingInstances
                 FlexibleInstances
                 DeriveDataTypeable
                 TemplateHaskell
                 QuasiQuotes

  ghc-options: -Wall 
               -- These warnings are not turned on by -Wall
               -fwarn-implicit-prelude 
               -fwarn-monomorphism-restriction 
               -fwarn-incomplete-record-updates 
               -fwarn-tabs 
               -fwarn-simple-patterns 
               -- -Werror
               -- Profiling 
               -- -prof
               -- -auto-all
               -- Internal compiler checking
               -- Remove literate comments with BirdPP
               -- -pgmL BirdPP


